# scraperkit

./: .gitignore  CLAUDE.md  IDEAS.md  LICENSE  README.md  pyproject.toml  requirements.txt
ai/: CONTEXT.md  CURSORRULES.md
docs/: ADMIN_PANEL.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  CUSTOM_STEPS.md  GETTING_STARTED.md
examples/: automotive_dealers.yaml  json_api.yaml  simple_products.yaml
scraperkit/: __init__.py  _subprocess_spider.py  cli.py
scraperkit/api/: app.py  configs.py  jobs.py
scraperkit/api/static/: index.html
scraperkit/core/: __init__.py  base.py  config.py  context.py  registry.py  runner.py
scraperkit/extractors/: __init__.py  css.py  json.py  regex.py  xpath.py
scraperkit/hooks/: __init__.py  dispatcher.py
scraperkit/logging/: __init__.py  db.py  setup.py
scraperkit/spider/: middlewares.py  runner.py
scraperkit/spider/scrapyproject/: items.py  pipelines.py  settings.py
scraperkit/spider/scrapyproject/spiders/: generic_spider.py
scraperkit/steps/: __init__.py  backup.py  clean.py  compare_previous.py  crawl.py  deduplicate.py  export_excel.py  export_json.py  notify_email.py  notify_slack.py  upload_sharepoint.py
tests/: test_config.py  test_db.py  test_registry.py  test_steps.py
