[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraperkit"
version = "0.1.0"
description = "Config-driven scraping and automation platform built on Scrapy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["scrapy", "scraping", "automation", "workflow", "data-pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "scrapy>=2.11",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "openpyxl>=3.1",
    "requests>=2.31",
]

[project.optional-dependencies]
fuzzy   = ["fuzzywuzzy>=0.18", "python-Levenshtein>=0.25"]
slack   = ["slack-sdk>=3.27"]
excel   = ["pandas>=2.2", "openpyxl>=3.1"]
all     = ["scraperkit[fuzzy,slack,excel]"]
dev     = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
scraperkit = "scraperkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraperkit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
